# nvc

./: .gitignore  Cargo.toml
benches/: benchmark.rs
data/: names.txt  notes.txt  ru_titles.txt
opds/: a_links.txt  opds.new.xml  opds.xml
src/: demo.rs  lib.rs
src/lib/: lib.rs
