[package]
name = "nvc"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "demo_nvc"
path = "src/demo.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#    ncurses = { version = "5.101", features = ["wide"] }
#    async-std = { version = "1.12", features = ["main"] }
    termion = "1"
